--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="card-neon card-tab" data-tab="ai">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-1.webp" alt="">
+                                <img src="./images/portfolio-1.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -236,7 +236,7 @@
                     <div class="card-neon card-tab" data-tab="webflow">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-2.webp" alt="">
+                                <img src="./images/portfolio-2.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -249,7 +249,7 @@
                     <div class="card-neon card-tab" data-tab="ai">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-3.webp" alt="">
+                                <img src="./images/portfolio-3.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -262,7 +262,7 @@
                     <div class="card-neon card-tab" data-tab="adobe">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-4.webp" alt="">
+                                <img src="./images/portfolio-4.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -275,7 +275,7 @@
                     <div class="card-neon card-tab" data-tab="webflow">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-1.webp" alt="">
+                                <img src="./images/portfolio-1.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -288,7 +288,7 @@
                     <div class="card-neon card-tab" data-tab="javascript">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-2.webp" alt="">
+                                <img src="./images/portfolio-2.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -511,7 +511,7 @@
             </div>
         </section>
 
-        <!-- price section -->
+        <!-- blog section -->
         <section class="blog" id="blog">
             <div class="container">
                 <div class="blog-box">
@@ -527,7 +527,7 @@
                                 <div class="card-neon">
                                     <div class="card-neon-body">
                                         <div class="card-neon-box card-item1">
-                                            <img src="/images/blog-1.webp" alt="">
+                                            <img src="./images/blog-1.webp" alt="">
                                             <div class="slider-content">
                                                 <div class="slider-content-wrapper">
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
@@ -545,7 +545,7 @@
                                 <div class="card-neon">
                                     <div class="card-neon-body">
                                         <div class="card-neon-box card-item1">
-                                            <img src="/images/blog-3.webp" alt="">
+                                            <img src="./images/blog-3.webp" alt="">
                                             <div class="slider-content">
                                                 <div class="slider-content-wrapper">
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
@@ -563,7 +563,7 @@
                                 <div class="card-neon">
                                     <div class="card-neon-body">
                                         <div class="card-neon-box card-item1">
-                                            <img src="/images/blog-2.webp" alt="">
+                                            <img src="./images/blog-2.webp" alt="">
                                             <div class="slider-content">
                                                 <div class="slider-content-wrapper">
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
@@ -581,7 +581,7 @@
                                 <div class="card-neon">
                                     <div class="card-neon-body">
                                         <div class="card-neon-box card-item1">
-                                            <img src="/images/blog-1.webp" alt="">
+                                            <img src="./images/blog-1.webp" alt="">
                                             <div class="slider-content">
                                                 <div class="slider-content-wrapper">
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
@@ -599,7 +599,7 @@
                                 <div class="card-neon">
                                     <div class="card-neon-body">
                                         <div class="card-neon-box card-item1">
-                                            <img src="/images/blog-3.webp" alt="">
+                                            <img src="./images/blog-3.webp" alt="">
                                             <div class="slider-content">
                                                 <div class="slider-content-wrapper">
                                                     <div class=""><i class="ri-user-line"></i> Dnitry Ivanov</div>
