--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <!-- Line -->
+
     <div class="line-wrapper">
         <div class="line"></div>
         <div class="line"></div>
