--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <div class="card-neon-body">
                                 <div class="card-neon-box card-item1">
                                     <div class="about-box">
-                                        <img src="images/about-icon-locker.svg" alt="" class="icon-img">
+                                        <img src="./images/About-icon-locker.svg" alt="" class="icon-img">
                                     </div>
                                     <div class="card-neon-box-content">
                                         <p class="about-title">UI/UX Design</p>
@@ -121,7 +121,7 @@
                                     <div class="card-neon-box card-item2">
                                         <div class="card-right-box-wrapper">
                                             <div class="icon-right-icon">
-                                                <img src="/images/about-icon-1.svg" alt="">
+                                                <img src="./images/about-icon-1.svg" alt="">
                                             </div>
                                             <div class="about-title">Business</div>
                                         </div>
@@ -134,7 +134,7 @@
                                     <div class="card-neon-box card-item2">
                                         <div class="card-right-box-wrapper">
                                             <div class="icon-right-icon">
-                                                <img src="/images/about-icon-2.svg" alt="">
+                                                <img src="./images/about-icon-2.svg" alt="">
                                             </div>
                                             <div class="about-title">Partners</div>
                                         </div>
@@ -195,7 +195,7 @@
                         <div class="card-neon">
                             <div class="card-neon-body">
                                 <div class="card-neon-box card-item3">
-                                    <img src="/images/services.webp" alt="">
+                                    <img src="./images/services.webp" alt="">
                                 </div>
                             </div>
                         </div>
@@ -303,7 +303,7 @@
                     <div class="card-neon card-tab" data-tab="javascript">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-4.webp" alt="">
+                                <img src="./images/portfolio-4.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
@@ -316,7 +316,7 @@
                     <div class="card-neon card-tab" data-tab="javascript">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <img src="/images/portfolio-3.webp" alt="">
+                                <img src="./images/portfolio-3.webp" alt="">
                                 <p class="portfolio-card-title">Sass Website Design</p>
                                 <ul class="portfolio-card-cat">
                                     <li>Adobe</li>
