--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     <div class="card-neon-box card-item2">
                                         <div class="card-right-box-wrapper">
                                             <div class="icon-right-icon">
-                                                <img src="./images/about-icon-1.svg" alt="">
+                                                <img src="./images/About-icon-1.svg" alt="">
                                             </div>
                                             <div class="about-title">Business</div>
                                         </div>
@@ -134,7 +134,7 @@
                                     <div class="card-neon-box card-item2">
                                         <div class="card-right-box-wrapper">
                                             <div class="icon-right-icon">
-                                                <img src="./images/about-icon-2.svg" alt="">
+                                                <img src="./images/About-icon-2.svg" alt="">
                                             </div>
                                             <div class="about-title">Partners</div>
                                         </div>
@@ -195,7 +195,7 @@
                         <div class="card-neon">
                             <div class="card-neon-body">
                                 <div class="card-neon-box card-item3">
-                                    <img src="./images/services.webp" alt="">
+                                    <img src="./images/Services.webp" alt="">
                                 </div>
                             </div>
                         </div>
