--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
                     <h1 class="home-title">I`m Daria Popova <br>a <span id="element"> Content Writer</span></h1>
-                    <p class="home-text">A personal portfolio is a collection of your work, achievements, and that highlights your
+                    <p class="home-text">A personal portfolio is a collection of your work, achievements, and that
+                        highlights your
                         abilities and professional growth</p>
                     <a href="#" class="btn">
                         <span>View portfolio</span>
@@ -231,7 +232,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -244,7 +246,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -257,7 +260,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -270,7 +274,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -283,7 +288,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -296,7 +302,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -309,7 +316,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -322,7 +330,8 @@
                                     <li>Adobe</li>
                                     <li>Ai</li>
                                 </ul>
-                                <a href="#" class="btn"><span>View portfolio</span><i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="btn"><span>View portfolio</span><i
+                                        class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
