--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 </div>
 
                 <ul class="mobile-menu-nav">
-                    <li><a href="#about" class="link">About</a></li>
-                    <li><a href="#service" class="link">Services</a></li>
-                    <li><a href="#portfolio" class="link">Portfolio</a></li>
-                    <li><a href="#education" class="link">Education</a></li>
-                    <li><a href="#price" class="link">Price</a></li>
-                    <li><a href="#blog" class="link">Blog</a></li>
-                    <li><a href="#touch" class="link">Contacts</a></li>
+                    <li><a href="#about" class="mobile-link">About</a></li>
+                    <li><a href="#service" class="mobile-link">Services</a></li>
+                    <li><a href="#portfolio" class="mobile-link">Portfolio</a></li>
+                    <li><a href="#education" class="mobile-link">Education</a></li>
+                    <li><a href="#price" class="mobile-link">Price</a></li>
+                    <li><a href="#blog" class="mobile-link">Blog</a></li>
+                    <li><a href="#touch" class="mobile-link">Contacts</a></li>
                 </ul>
             </div>
         </div>
